example for opentopo tiles in Dutch EPSG:28992 and PDOK tiling scheme

--- a/opentopo/app/index.html
+++ b/opentopo/app/index.html
@@ -4,6 +4,8 @@
     <title>OpenTopo - Apps</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     <meta charset="utf-8"/>
+    <meta name="author" content="Just van den Broecke">
+
     <style>
         html, body {
             height: 100%;
@@ -22,12 +24,17 @@
 <h3>Mobile</h3>
 
 <p>
-    <a href="opentopo.html">OpenTopo Mobile Map Viewer</a> - basic map viewer (EPSG:900913) with OpenTopo 800px/km tiles
+    <a href="opentopo.html">OpenTopo Mobile Map Viewer - EPSG:900913</a> - basic map viewer with OpenTopo 800px/km tiles
     by Just van den Broecke
 </p>
 
 <p>
-    <a href="wandel.html">OpenTopo Mobile Hiking App</a> - handy GPS hiking with OSM hiking trails overlay by Just van
+    <a href="opentopord.html">OpenTopo Mobile Map Viewer - EPSG:28992</a> - basic map viewer with OpenTopo 800px/km tiles (Dutch Projection)
+    by Just van den Broecke
+</p>
+
+<p>
+    <a href="wandel.html">OpenTopo Mobile Hiking App - EPSG:900913</a> - handy GPS hiking with OSM hiking trails overlay by Just van
     den Broecke
 </p>
 
