--- a/opentopo/app/wandel.html
+++ b/opentopo/app/wandel.html
@@ -4,6 +4,8 @@
     <title>OpenTopo - Hiking App - Leaflet</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta charset="utf-8" />
+    <meta name="author" content="Just van den Broecke">
+
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
     <link rel="stylesheet" href="leaflet-gps-1.0.0/leaflet-gps.min.css" />
 
