opentopo small changes

--- a/opentopo/app/index.html
+++ b/opentopo/app/index.html
@@ -19,7 +19,7 @@
 <body>
 <h2>OpenTopo Apps</h2>
 
-<p>Various web apps to demonstrate and use <a href="http://www.opentopo.nl">OpenTopo</a> map results.</p>
+<p>Various web apps to demonstrate and use <a href="http://www.opentopo.nl">OpenTopo</a> map results. See also some <a href="../3d">3D demos</a></p>
 
 <h3>Mobile</h3>
 
