ol3-cesium example with some data

--- a/3d/app/index.html
+++ b/3d/app/index.html
@@ -19,13 +19,17 @@
 <body>
 <h2>3D Apps with Dutch Open GeoData</h2>
 
-<p>Various web apps to demonstrate and use 3D web mapping.
+<p>Various web apps to demonstrate and use 3D web mapping. by Just van den Broecke
 
 <h3>Open Topo</h3>
 
 <p>
     <a href="opentopo.html">OpenTopo in Cesium3D Viewer</a> - viewer with OpenTopo 800px/km tiles as imagery layer in CesiumJS
-    by Just van den Broecke
+
+</p>
+<p>
+    <a href="opentopo-bing.html">Ditto with Bing background</a> - viewer with OpenTopo 800px/km tiles as imagery layer in CesiumJS
+
 </p>
 
 
@@ -33,7 +37,11 @@
 
 <p>
     <a href="top10nl3d-1.html">Top10NL3D on OpenTopo in Cesium3D Viewer</a> - viewer with OpenTopo 800px/km and 3DBuildings from Top10NL3D (Valkenburg)
-    by Just van den Broecke
+
+</p>
+<p>
+    <a href="sidebyside.html">Top10NL3D on OpenTopo in OpenLayers3+Cesium3D Integrated</a> - ditto, but using OL3-Cesium integration
+
 </p>
 
 
