documentatie, app updates en meer

--- a/opentopo/app/index-m.html
+++ b/opentopo/app/index-m.html
@@ -22,6 +22,10 @@
   <a href="ot">OpenTopo Results</a> - various Map Viewers for OpenTopo
 </p>
 
+<p>
+  <a href="3d">3D Experiments</a> - various 3D Web Demo's and Apps
+</p>
+
 
 </body>
 </html>
