--- a/opentopo/app/opentopo.html
+++ b/opentopo/app/opentopo.html
@@ -30,11 +30,12 @@
     var map = L.map('map');
     map.setView([52.312, 5.6], 9);
     // var mapUrl = 'http://4umaps.eu/{z}/{x}/{y}.png';
-    var mapUrl = 'http://ws.nlextract.nl/gwc/service/tms/1.0.0/opentopo@EPSG:900913@png/{z}/{x}/{y}.png';
+    // var mapUrl = 'http://ws.nlextract.nl/gwc/service/tms/1.0.0/opentopo@EPSG:900913@png/{z}/{x}/{y}.png';
+    var mapUrl = 'http://ws.nlextract.nl/srv/tiles/opentopo/EPSG900913/{z}/{x}/{y}.png';
 
     // Voeg kaart toe
     L.tileLayer(mapUrl, {
-        tms: true,
+        tms: false,
         maxZoom: 18,
         continuousWorld: true,
         detectRetina: false,
