--- a/opentopo/app/opentopord.html
+++ b/opentopo/app/opentopord.html
@@ -38,7 +38,8 @@
                 resolutions: [3440.640, 1720.320, 860.160, 430.080, 215.040, 107.520, 53.760, 26.880, 13.440, 6.720, 3.360, 1.680, 0.840, 0.420]
             });
 
-    var url = 'http://ws.nlextract.nl/gwc/service/tms/1.0.0/opentopo@nlGridSetPDOK@png/{z}/{x}/{y}.png';
+    // var url = 'http://ws.nlextract.nl/gwc/service/tms/1.0.0/opentopo@nlGridSetPDOK@png/{z}/{x}/{y}.png';
+    var url = 'http://ws.nlextract.nl/srv/tms/1.0.0/opentopo/EPSG28992/{z}/{x}/{y}.png';
     var map = new L.Map('map', {
         continuousWorld: true,
         crs: RD,
