--- a/opentopo/app/opentopo.html
+++ b/opentopo/app/opentopo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>OpenTopo - KaartViewer - Leaflet</title>
+    <title>OpenTopo - 37.5/200/400/800/1600px/km - OSM/Google Tiles</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta charset="utf-8" />
     <meta name="author" content="Just van den Broecke">
@@ -39,7 +39,7 @@
         maxZoom: 18,
         continuousWorld: true,
         detectRetina: false,
-        attribution: 'CC by <a href="http://www.opentopo.nl">OpenTopo</a>'
+        attribution: 'CC by CA <a href="http://www.opentopo.nl">OpenTopo</a> - <a href=http://openstreetmap.org>OpenStreetMap</a>'
     }).addTo(map);
 
     var newStyle = {radius: 25, weight:4, color: '#f0c', fill: true, opacity:0.8};
