--- a/opentopo/app/opentopord.html
+++ b/opentopo/app/opentopord.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>OpenTopoKaart - 800pxkm - RD Tiles</title>
+    <title>OpenTopo - 37.5/200/400/800/1600px/km - RD Tiles</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     <meta charset="utf-8"/>
     <meta name="author" content="Just van den Broecke, proj4leaflet by Bart van den Eijnden">
@@ -49,8 +49,8 @@
                 minZoom: 3,
                 maxZoom: 13,
                 detectRetina: false,
-                attribution: 'CC by <a href="http://www.opentopo.nl">OpenTopo</a>',
-                continuousWorld: true
+                continuousWorld: true,
+                attribution: 'CC by CA <a href="http://www.opentopo.nl">OpenTopo</a> - <a href=http://openstreetmap.org>OpenStreetMap</a>'
             })
         ],
         center: new L.LatLng(52, 5.3),
