--- a/opentopo/app/wandel.html
+++ b/opentopo/app/wandel.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>OpenTopo - Hiking App - Leaflet</title>
+    <title>OpenTopo - Hiking App - OSM Tiles</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta charset="utf-8" />
     <meta name="author" content="Just van den Broecke">
@@ -44,7 +44,7 @@
         maxZoom: 18,
         continuousWorld: true,
         detectRetina: false,
-        attribution: 'CC by <a href="http://www.opentopo.nl">OpenTopo</a>'
+        attribution: 'CC by CA <a href="http://www.opentopo.nl">OpenTopo</a> - <a href=http://openstreetmap.org>OpenStreetMap</a>'
     });
 
     var eu = L.tileLayer(
