--- a/opentopo/app/opentopord.html
+++ b/opentopo/app/opentopord.html
@@ -39,7 +39,7 @@
             });
 
     // var url = 'http://ws.nlextract.nl/gwc/service/tms/1.0.0/opentopo@nlGridSetPDOK@png/{z}/{x}/{y}.png';
-    var url = 'http://ws.nlextract.nl/srv/tms/1.0.0/opentopo/EPSG28992/{z}/{x}/{y}.png';
+    var url = 'http://s.map5.nl/map/gast/tms/1.0.0/opentopo/EPSG28992/{z}/{x}/{y}.png';
     var map = new L.Map('map', {
         continuousWorld: true,
         crs: RD,
