--- a/3d/app/opentopo-bing.html
+++ b/3d/app/opentopo-bing.html
@@ -44,8 +44,8 @@
 //
 
     var layers = viewer.scene.imageryLayers;
-    layers.addImageryProvider(new Cesium.TileMapServiceImageryProvider({
-                url: 'http://ws.nlextract.nl/gwc/service/tms/1.0.0/opentopo@EPSG:900913@png',
+    layers.addImageryProvider(new Cesium.OpenStreetMapImageryProvider({
+                            url: 'http://s.map5.nl/map/gast/tiles/opentopo/EPSG900913',
                 credit: 'OpenTopo Map bij Imergis/JW van Aalst with data from OpenStreetMap and Dutch Kadaster Top10NL'
             }));
 
