--- a/opentopo/app/opentopo.html
+++ b/opentopo/app/opentopo.html
@@ -30,8 +30,7 @@
     var map = L.map('map');
     map.setView([52.312, 5.6], 9);
     // var mapUrl = 'http://4umaps.eu/{z}/{x}/{y}.png';
-    // var mapUrl = 'http://ws.nlextract.nl/gwc/service/tms/1.0.0/opentopo@EPSG:900913@png/{z}/{x}/{y}.png';
-    var mapUrl = 'http://s.map5.nl/map/gast/tiles/opentopo/EPSG900913/{z}/{x}/{y}.png';
+    var mapUrl = 'http://s.map5.nl/map/gast/tiles/opentopo/EPSG900913/{z}/{x}/{y}.jpeg';
 
     // Voeg kaart toe
     L.tileLayer(mapUrl, {
