--- a/3d/app/opentopo.html
+++ b/3d/app/opentopo.html
@@ -29,6 +29,7 @@
         baseLayerPicker: false,
         imageryProvider : new Cesium.OpenStreetMapImageryProvider({
                         url: 'http://s.map5.nl/map/gast/tiles/opentopo/EPSG900913',
+                        fileExtension: 'jpeg',
                         credit: 'OpenTopo Map bij Imergis/JW van Aalst with data from OpenStreetMap and Dutch Kadaster Top10NL'
                     })
 //        ,
