update Cesium apps with camera pos and relief map

--- a/3d/app/index.html
+++ b/3d/app/index.html
@@ -35,13 +35,13 @@
     <hr/>
 
     <p>
-        <a href="opentopo.html">OpenTopo in Cesium Viewer</a> - viewer with OpenTopo 800px/km tiles as imagery layer in
+        <a href="opentopo.html">OpenTopo in Cesium Viewer</a> - viewer with OpenTopo tiles as imagery layer in
         CesiumJS
 
     </p>
 
     <p>
-        <a href="opentopo-bing.html">Ditto with Bing background</a> - viewer with OpenTopo 800px/km tiles as imagery
+        <a href="opentopo-relief.html">Ditto with Relief map from AHN2</a> - viewer with AHN2 Relief Map tiles as imagery
         layer in CesiumJS
 
     </p>
