Historische Kaart Bonne in 3D

--- a/3d/app/index.html
+++ b/3d/app/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -45,6 +46,12 @@
         layer in CesiumJS
 
     </p>
+    <p>
+        <a href="bonnebladen.html">Historic Map in Cesium Viewer</a> - viewer with Bonnebladen 1925 tiles as imagery layer in
+        CesiumJS
+
+    </p>
+
     <hr/>
 
 
