--- a/3d/app/sidebyside.html
+++ b/3d/app/sidebyside.html
@@ -66,10 +66,15 @@
     });
 
     var ol3d = new olcs.OLCesium(map2D, 'map3d');
-
     var terrainProvider = new Cesium.CesiumTerrainProvider({
-        url: '//cesiumjs.org/stk-terrain/tilesets/world/tiles'
+        url : '//assets.agi.com/stk-terrain/world',
+        requestWaterMask: false,
+        requestVertexNormals: false
     });
+
+//    var terrainProvider = new Cesium.CesiumTerrainProvider({
+//        url: '//cesiumjs.org/stk-terrain/tilesets/world/tiles'
+//    });
     var scene = ol3d.getCesiumScene();
     scene.terrainProvider = terrainProvider;
     ol3d.setEnabled(true);
