small doc fixes en app page

--- a/opentopo/app/index.html
+++ b/opentopo/app/index.html
@@ -27,9 +27,9 @@
     <h2>OpenTopo Apps</h2>
 
     <p>Deze webapps demonstreren <a href="http://www.opentopo.nl">OpenTopo</a> kaartdiensten.
-        De originele OpenTopo rasters op resoluties 37.5/200/400/800/1600pix/km <br>zijn zodanig gecombineerd
+        De originele OpenTopo rasters op resoluties 37.5/200/400/800/1600/3200pix/km <br>zijn zodanig gecombineerd
         dat iedere resolutie binnen een schaalgebied zichtbaar wordt. Bovendien zijn de plaatjes "getegeld" (tiled).
-        <br>De meeste apps zijn mobiel te gebruiken. OpenTopo versie: feb 2015.
+        <br>De meeste apps zijn mobiel te gebruiken. OpenTopo versie: april 2016.
     </p>
     <table class="table table-bordered">
         <!--<thead>-->
@@ -42,24 +42,24 @@
         <tbody>
         <tr>
             <td>
-                <a href="opentopo.html">
+                <a href="http://app.map5.nl/nltopo/?key=gast#osm/opentopo/15/5.773337/52.10192">
                     <img src="images/screenshots/opentopo-osm-s.png" class="img-rounded" alt="OpenTopo OSM">
                 </a>
 
                 <p>
-                    <a href="opentopo.html">OpenTopo Mobile Map Viewer (OSM)</a><br>
+                    <a href="http://app.map5.nl/nltopo/?key=gast#osm/opentopo/15/5.773337/52.10192">OpenTopo Mobile Map Viewer (OSM)</a><br>
                     Basis map viewer met OpenTopo tiles in OpenStreetMap (OSM)/Google schema.
                     Gemaakt met Leaflet. Maker: Just van den Broecke.
                 </p>
             </td>
 
             <td>
-                <a href="opentopord.html">
+                <a href="http://app.map5.nl/nltopo/">
                     <img src="images/screenshots/opentopo-rd-s.png" class="img-rounded" alt="OpenTopo RD">
                 </a><br>
 
                 <p>
-                    <a href="opentopord.html">OpenTopo Mobile Map Viewer (RD)</a><br>
+                    <a href="http://app.map5.nl/nltopo/">OpenTopo Mobile Map Viewer (RD)</a><br>
                     Basis map viewer met OpenTopo tiles in Nederlands PDOK-schema.
                     Gemaakt met Leaflet. Maker: Just van den Broecke.
                 </p>
@@ -73,7 +73,7 @@
                 </a><br>
 
                 <p>De <a href="wandel.html">Wandel App (OSM) </a>
-                    is een basis map viewer gemaakt met Leaflet met daarin OpenTopo tiles
+                    is een basis map viewer gemaakt met Leaflet met daarin OpenTopo tiles via <a href="http://map5.nl">map5.nl</a>
                     gecombineerd met OSM wandelpaden. Er is GPS-lokatie-ondersteuning zodat je een pad kunt volgen.
                     Maker: Just van den Broecke.</p>
 
@@ -85,7 +85,7 @@
 
                 <p><a href="http://kadviewer.kademo.nl">De KadViewer</a>
                     is een op het <a href="http://heron-mc.org">Heron viewer framework</a>
-                    gebaseerde web-desktop app met daarin OpenTopo en veel
+                    gebaseerde web-desktop app met daarin OpenTopo via http://map5.nl en veel
                     andere interessante kaartlagen. Mogelijkheid tot kaartlagen over elkaar heen leggen
                     en doorzichtigheid daarbij aan te passen, plus vele andere "tools" bijv tekenen (redlining),
                     WFS queries en upload/download van vector data.
@@ -114,7 +114,8 @@
         </tbody>
     </table>
     <p>
-        Zie verder ook de <a href="../3d">3D demos</a>. heb je ook een leuke/mooie app met OpenTopo,
+        Zie verder ook de <a href="../3d">3D demos</a> en <a href="http://app.map5.nl">app.map5.nl</a>.
+        Heb je ook een leuke/mooie app met OpenTopo,
         laat ons weten.
 
     </p>
