--- a/opentopo/app/index.html
+++ b/opentopo/app/index.html
@@ -4,9 +4,9 @@
     <title>OpenTopo - Apps</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 </head>
 <body>
 <nav class="navbar navbar-default">
@@ -42,24 +42,24 @@
         <tbody>
         <tr>
             <td>
-                <a href="http://app.map5.nl/nltopo/?key=gast#osm/opentopo/15/5.773337/52.10192">
+                <a href="https://app.map5.nl/nltopo/?key=gast#osm/opentopo/15/5.773337/52.10192">
                     <img src="images/screenshots/opentopo-osm-s.png" class="img-rounded" alt="OpenTopo OSM">
                 </a>
 
                 <p>
-                    <a href="http://app.map5.nl/nltopo/?key=gast#osm/opentopo/15/5.773337/52.10192">OpenTopo Mobile Map Viewer (OSM)</a><br>
+                    <a href="https://app.map5.nl/nltopo/?key=gast#osm/opentopo/15/5.773337/52.10192">OpenTopo Mobile Map Viewer (OSM)</a><br>
                     Basis map viewer met OpenTopo tiles in OpenStreetMap (OSM)/Google schema.
                     Gemaakt met Leaflet. Maker: Just van den Broecke.
                 </p>
             </td>
 
             <td>
-                <a href="http://app.map5.nl/nltopo/">
+                <a href="https://app.map5.nl/nltopo/">
                     <img src="images/screenshots/opentopo-rd-s.png" class="img-rounded" alt="OpenTopo RD">
                 </a><br>
 
                 <p>
-                    <a href="http://app.map5.nl/nltopo/">OpenTopo Mobile Map Viewer (RD)</a><br>
+                    <a href="https://app.map5.nl/nltopo/">OpenTopo Mobile Map Viewer (RD)</a><br>
                     Basis map viewer met OpenTopo tiles in Nederlands PDOK-schema.
                     Gemaakt met Leaflet. Maker: Just van den Broecke.
                 </p>
@@ -79,13 +79,13 @@
 
             </td>
             <td>
-                <a href="http://kadviewer.kademo.nl">
+                <a href="https://kadviewer.map5.nl">
                     <img src="images/screenshots/opentopo-kadviewer-s.png" class="img-rounded" alt="OpenTopo KadViewer">
                 </a>
 
-                <p><a href="http://kadviewer.kademo.nl">De KadViewer</a>
+                <p><a href="https://kadviewer.map5.nl">De Map5 KadViewer</a>
                     is een op het <a href="http://heron-mc.org">Heron viewer framework</a>
-                    gebaseerde web-desktop app met daarin OpenTopo via http://map5.nl en veel
+                    gebaseerde web-desktop app met daarin OpenTopo via https://map5.nl en veel
                     andere interessante kaartlagen. Mogelijkheid tot kaartlagen over elkaar heen leggen
                     en doorzichtigheid daarbij aan te passen, plus vele andere "tools" bijv tekenen (redlining),
                     WFS queries en upload/download van vector data.
@@ -114,7 +114,7 @@
         </tbody>
     </table>
     <p>
-        Zie verder ook de <a href="../3d">3D demos</a> en <a href="http://app.map5.nl">app.map5.nl</a>.
+        Zie verder ook de <a href="../3d">3D demos</a> en <a href="https://app.map5.nl">app.map5.nl</a>.
         Heb je ook een leuke/mooie app met OpenTopo,
         laat ons weten.
 
