--- a/opentopo/app/opentopo.html
+++ b/opentopo/app/opentopo.html
@@ -6,10 +6,10 @@
     <meta charset="utf-8" />
     <meta name="author" content="Just van den Broecke">
 
-    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
+    <link rel="stylesheet" href="https://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
     <link rel="stylesheet" href="leaflet-gps-1.0.0/leaflet-gps.min.css" />
 
-    <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
+    <script src="https://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
     <!-- by https://github.com/stefanocudini/leaflet-gps  -->
     <script src="leaflet-gps-1.0.0/leaflet-gps.min.js"></script>
     <style>
@@ -30,7 +30,7 @@
     var map = L.map('map');
     map.setView([52.312, 5.6], 9);
     // var mapUrl = 'http://4umaps.eu/{z}/{x}/{y}.png';
-    var mapUrl = 'http://s.map5.nl/map/gast/tiles/opentopo/EPSG900913/{z}/{x}/{y}.jpeg';
+    var mapUrl = 'https://s.map5.nl/map/gast/tiles/opentopo/EPSG900913/{z}/{x}/{y}.jpeg';
 
     // Voeg kaart toe
     L.tileLayer(mapUrl, {
