3d apps use https i.s.o. http

--- a/3d/app/top10nl3d-1.html
+++ b/3d/app/top10nl3d-1.html
@@ -32,7 +32,7 @@
     var options = {
         baseLayerPicker: false,
         imageryProvider: new Cesium.OpenStreetMapImageryProvider({
-            url: 'http://s.map5.nl/map/map5.demo11/tiles/opentopo/EPSG900913',
+            url: 'https://s.map5.nl/map/map5.demo11/tiles/opentopo/EPSG900913',
             fileExtension: 'jpeg',
             credit: 'OpenTopo Map by JW van Aalst from OSM,Top10NL served by map5.nl'
         })
