--- a/3d/app/bonnebladen.html
+++ b/3d/app/bonnebladen.html
@@ -33,7 +33,7 @@
     var options = {
         baseLayerPicker: false,
         imageryProvider : new Cesium.OpenStreetMapImageryProvider({
-                        url: 'http://s.map5.nl/map/map5.demo11/tiles/bonne_1925/EPSG900913',
+                        url: 'https://s.map5.nl/map/map5.demo11/tiles/bonne_1925/EPSG900913',
                         fileExtension: 'png',
                         credit: 'Served by map5.nl'
                     })
