--- a/3d/app/opentopo-relief.html
+++ b/3d/app/opentopo-relief.html
@@ -49,7 +49,7 @@
 
     var layers = viewer.scene.imageryLayers;
     layers.addImageryProvider(new Cesium.OpenStreetMapImageryProvider({
-                url: 'http://s.map5.nl/map/map5.demo11/tiles/relief_struct/EPSG900913',
+                url: 'https://s.map5.nl/map/map5.demo11/tiles/relief_struct/EPSG900913',
                 fileExtension: 'jpeg',
                 credit: 'Relief Map by JW van Aalst/F. Steggink from AHN2 served by map5.nl'
             }));
